--- a/html.2/style/form.css
+++ b/html.2/style/form.css
@@ -13,3 +13,20 @@ label{
 form{
     padding: 30px;
 }
+
+input[type="submit"] {
+    background-color: rgb(83, 83, 83);
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  
+  input[type="submit"]:hover {
+    background-color: #3e8e41;
+  }
