--- a/html.2/style/jeu.css
+++ b/html.2/style/jeu.css
@@ -7,3 +7,41 @@
     left: 210px;
     cursor: pointer;
 }
+
+h1#jeu{
+    text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: black;
+}
+
+/*input[type="submit"] {
+    border-radius: 2px;
+    font-size: 15px;
+    cursor: pointer;
+    
+    
+}
+
+input[type="submit"]:hover {
+    background-color: #8c8377;
+}*/
+
+input[type="submit"] {
+    position: fixed;
+    background-color: rgb(83, 83, 83);
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 5px;
+    bottom: 5%;
+    left: 50%;
+  }
+  
+  input[type="submit"]:hover {
+    background-color: #3e8e41;
+  }
