--- a/html.2/style/main.css
+++ b/html.2/style/main.css
@@ -5,38 +5,60 @@
 }
 
 body {
-    background-color: rgb(224, 224, 224);
+    background-color: rgb(235, 234, 234);
 }
 
-h1, h2{
-    color: rgb(170, 1, 1);
+h1#blockgame{
+    color: #d4d17e;
+    text-align: center;
+    font-family: Georgia, serif	;
+    background-color: rgb(116, 116, 116);
+    
+}
+
+h1#titre, h2, h1#jeu{
+    color: #a7887c;
+    text-align: left;
+    background-color: rgb(235, 234, 234);
 }
 
 nav ul{
     display: flex;
-    background: rgb(0, 0, 0);
+    background: rgb(116, 116, 116);
     margin-bottom: 10px;
     list-style-type: none;
+    text-align: center;
+    
 }
 
 nav ul li a{
     display: block;
     padding: 15px 30px;
-    background: rgb(0, 0, 0);
+    background: rgb(116, 116, 116);
     margin-bottom: 10px;
-    color: rgb(170, 1, 1);
+    color: #d4d17e;
     font-weight: 900;
+    
 }
 
 nav ul li a:hover{
-    color: rgb(255, 0, 0);
+    color: #bebd93;
 }
 
 p {
     color: rgb(0, 0, 0);
+    display: inline;
 }
 
 .container{
-    width: 50%;
-    margin: 50px;
+    
+    width: 300px;
+    margin: 30px;
+    width: auto;
+    
+    
+}
+
+form{
+    width: 500px;
 }
